--- a/index.html
+++ b/index.html
@@ -1,24 +1,20 @@
 ---
 layout: site
-description: A description about my blog homepage
+description: FreeAir is a software and technology focused blog and podcast
 ---
 
-<div id="posts">
-  <h2>Blog Posts</h2>
-  <ul>
+<article class="podcast">
+  <ul class="entries">
     {% for post in site.posts %}
-      <li><span>{{ post.date | date_to_string }}</span> - <a href="{{ post.url }}">{{ post.title }}</a></li>
-    {% endfor %}
-  </ul>
-</div>
 
-<div id="pages">
-  <h2>Pages</h2>
-  <ul>
-    {% for page in site.html_pages %}
-      {% if page.title %}
-        <li><a href="{{ page.url }}">{{ page.title }}</a></li>
-      {% endif %}
+    <li>
+      <a href="{{ post.url }}">
+        <img src="{{ post.image }}" />
+        <h3>{{ post.title }}</h3>
+      </a>
+    </li>
+
     {% endfor %}
-  </ul>
-</div>
+    </ul
+
+  </article>
