enclose in string qoutes

--- a/_posts/2012-08-12-Anti-Patterns.html
+++ b/_posts/2012-08-12-Anti-Patterns.html
@@ -6,7 +6,7 @@ creator: Ikenna Okpala
 summary: Its been a long time since anti patterns came to being. Perhaps you would easily relate to the all too common design patterns and all what not. But here we bring to light some anti patterns, code smells and discuss them
 tags: [anti patterns, design patterns, code smells, OOP, software engineering, ruby, go-lang, python]
 podcast:
-- duration: 36:02 minutes
+- duration: "36:02"
   size: 34.6 MB
   location: http://pod.freeair.io/audio/episode_1_anti_patterns.mp3
 last_updated: 2012-08-12
