--- a/_posts/2012-08-19-Go-Lang-Chat-Free-Style-with-Seyi-Ogunyemi.html
+++ b/_posts/2012-08-19-Go-Lang-Chat-Free-Style-with-Seyi-Ogunyemi.html
@@ -1,5 +1,6 @@
 ---
 layout: site
+type: podcast
 title: "Episode #3: Go Lang Chat Free Style with Seyi Ogunyemi"
 sub_title: Go Lang Chat Free Style with Seyi Ogunyemi
 creator: Ikenna Okpala
@@ -12,7 +13,7 @@ podcast:
 last_updated: 2012-08-19
 ---
 
-<article class="podcast">
+<article class="{{ page.type }}">
  <div class="title"> {{page.title}} </div>
  <div class="date">by {{page.creator}} on {{ page.date | date: "%d %B %Y" }}</div>
  <div id="mp3_audio">
@@ -53,7 +54,7 @@ last_updated: 2012-08-19
 </div>
 
 </div>
-<div id="tags">
+<div class="tags">
   {% for tag in page.tags %}
   <a href="#" >{{tag}} </a>
   {% endfor %}
