--- a/index.html
+++ b/index.html
@@ -3,18 +3,17 @@ layout: site
 description: FreeAir is a software and technology focused blog and podcast
 ---
 
-<article class="podcast">
-  <ul class="entries">
-    {% for post in site.posts %}
-
-    <li>
-      <a href="{{ post.url }}">
-        <img src="{{ post.image }}" />
-        <h3>{{ post.title }}</h3>
-      </a>
-    </li>
-
+{% for post in site.posts %}
+<article class="{{ post.type }}">
+  <div class="title"><a href="{{ post.url }}">{{ post.title }}</a></div>
+  <div class="date">{{ post.date | date: "%d %B %Y" }}</div>
+  <div class="summary">
+    {{ post.summary }}
+  </div>
+  <div class="tags">
+    {% for tag in post.tags %}
+    <a href="#" >{{tag}} </a>
     {% endfor %}
-    </ul
-
-  </article>
+  </div>
+</article>
+{% endfor %}
