posts: fixed typos in Go post.

--- a/_posts/2012-08-19-Go-Lang-Chat-Free-Style-with-Seyi-Ogunyemi.html
+++ b/_posts/2012-08-19-Go-Lang-Chat-Free-Style-with-Seyi-Ogunyemi.html
@@ -4,7 +4,7 @@ type: podcast
 title: "Episode #3: Go Lang Chat Free Style with Seyi Ogunyemi"
 sub_title: Go Lang Chat Free Style with Seyi Ogunyemi
 creator: Ikenna Okpala
-summary: In this podcast seyi talks about google's Go Programming language. He describes some of the concepts in Go-lang, the architecture and lines of thought used to create the Go-Lang programmes. We also discuss some fundamental concepts of verious rogramming languages and concepts.
+summary: In this podcast, Seyi talks about Google's Go Programming language. He describes some of the concepts in Go, the architecture and lines of thought used to create the Go programmes. We also discuss some fundamental concepts of various programming languages.
 tags: [mobile, tablets, software engineering, java, inye, android]
 podcast:
 - duration: "37:57"
