--- a/index.html
+++ b/index.html
@@ -5,10 +5,21 @@ description: FreeAir is a software and technology focused blog and podcast
 
 {% for post in site.posts %}
 <article class="{{ post.type }}">
-  <div class="title"><a href="{{ post.url }}">{{ post.title }}</a></div>
-  <div class="date">{{ post.date | date: "%d %B %Y" }}</div>
-  <div class="summary">
-    {{ post.summary }}
+  <div class="data">
+    <div class="title"><a href="{{ post.url }}">{{ post.title }}</a></div>
+    <div class="date">{{ post.date | date: "%d %B %Y" }}</div>
+    <div class="summary">
+      {{ post.summary }}
+    </div>
+    <span class="more"><a href="{{ post.url }}">More</a><span>
+  </div>
+  <div id="audio">
+    <div><object width="250" height="250"><param name="movie" value="//www.mixcloud.com/media/swf/player/mixcloudLoader.swf?feed={{ post.feed }}&embed_uuid=8e620926-c71c-488e-b4f8-8777e6e973c0&stylecolor=&embed_type=widget_standard"></param><param name="allowFullScreen" value="true"></param><param name="wmode" value="opaque"></param><param name="allowscriptaccess" value="always"></param><embed src="//www.mixcloud.com/media/swf/player/mixcloudLoader.swf?feed={{ post.feed }}&embed_uuid=8e620926-c71c-488e-b4f8-8777e6e973c0&stylecolor=&embed_type=widget_standard" type="application/x-shockwave-flash" wmode="opaque" allowscriptaccess="always" allowfullscreen="true" width="250" height="250"></embed></object><div style="clear:both; height:3px;"></div></div>
+    {% for pod in page.podcast %}
+    <div class="info">
+      <span class="duration">{{pod.duration}} mins</span><span class="size">{{pod.size}}</span> <a href="{{pod.location}}" target="_blank" >Download</a></span>
+    </div>
+    {% endfor %}
   </div>
   <div class="tags">
     {% for tag in post.tags %}
